Remove large files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ uploads/*
 uploads/
 resources/GeoLite2-City_20210622/GeoLite2-City.mmdb 
 *.mmdb 
+*.zip
+resources/GeoLite2-City_20210622
+*.mmdb
