--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,8 @@ tour_time_slots_guide.md.removed
 create_time_slots_tables.php.removed
 setup_tour_time_slots.php.removed
 tour_time_slots.sql.removed
-#storage/framework/cache/data/*
-#storage/framework/cache/data/
+storage/framework/cache/data/*
+storage/framework/cache/data/
 tour-availability-analysis.md
 tour-availability-analysis-arabic.md
 setup_time_slots_db.php
